<?xml version="1.0" encoding="utf-8"?>
<!-- se tiene que meter todo el constraints original en este layout -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Se coloco todo el contraintslaout dentro del drawerlayout , no se le modifico nada   -->




<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#000000">

    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->


  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:orientation="vertical">

      <TextView android:id="@+id/TextView03"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/archivo"
          android:textColor="#FFFFFF"
          android:textSize="25sp"
          android:textStyle="bold"
          android:paddingBottom="10dp"

          />


      <EditText
          android:id="@+id/Archivo"
          android:layout_height="40dp"
          android:layout_width="match_parent"
          android:hint="@string/archivo1"
          android:autofillHints=""
          android:inputType="text"
          android:textColor="#000000"
          android:background="#FFFFFF" />
      <Space
          android:layout_width="20dp"
          android:layout_height="16dp" />

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/BtnArchivo"
          android:text="@string/escoger"
          android:paddingLeft="20dip"
          android:paddingRight="20dip"

          />


      <TextView android:id="@+id/TextView04"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="20dp"
          android:textColor="#FFFFFF"
          android:textSize="25sp"
          android:textStyle="bold"
          android:paddingBottom="10dp"

          />


  </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

    <!--   Poner una restriccion equivalente
    despues app:layout_constraintTop_toTopOf="parent"-->

        <TextView android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
         />

        <TextView android:id="@+id/TextView01_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="30dp" />



        <TextView android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView android:id="@+id/TextView02_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />



        <LinearLayout android:orientation="horizontal"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="80dp"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BtnAnterior"
                android:text="@string/anterior"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

            <!--Genera un espacio entre los elementos -->
            <Space
                android:layout_width="20dp"
                android:layout_height="16dp" />

            <!--Falta implementar la logica de este boton-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BtnSiguiente"
                android:text="@string/siguiente"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />







        </LinearLayout>


        <LinearLayout android:orientation="horizontal"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="80dp"
            android:gravity="center">

            <!--Falta implementar la logica de este boton-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BtnMostrar"
                android:text="@string/ayuda"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:textColor="#E7E4E4"
                android:background="@android:color/transparent"
                />


            <Space
                android:layout_width="20dp"
                android:layout_height="16dp" />

            <!--Falta implementar la logica de este boton-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BtnCambiar"
                android:text="cambiar"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:textColor="#E7E4E4"
                android:background="@android:color/transparent"
                />





        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>



    <!-- Menú deslizante -->
    <!--Nota:  Donde dice app:menu tengo que mandar a llamar un menu
       pero ese menu debe de estar dentro de una carpeta menu -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu2"/>

</androidx.drawerlayout.widget.DrawerLayout>

